# aichallenge-2025-on-ubuntu

./: README.md
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/launch/: reference.launch.xml
aichallenge/workspace/src/aichallenge_submit/model_predictive_control/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/model_predictive_control/include/model_predictive_control/: model_predictive_control.hpp
aichallenge/workspace/src/aichallenge_submit/model_predictive_control/src/: model_predictive_control.cpp
aichallenge/workspace/src/aichallenge_submit/simple_pure_pursuit/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/simple_pure_pursuit/src/: simple_pure_pursuit.cpp
